@@ -129,6 +129,9 @@ Bug Fixes
 * SOLR-6424: The hdfs block cache BLOCKCACHE_WRITE_ENABLED is not defaulting to false like it 
   should. (Mark Miller)
 
+* SOLR-6425: If you using the new global hdfs block cache option, you can end up reading corrupt 
+  files on file name reuse. (Mark Miller, Gregory Chanan)
+
 Other Changes
 ---------------------
 
